--- a/baby_gender_poll/templates/layout.html
+++ b/baby_gender_poll/templates/layout.html
@@ -1,7 +1,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <title>IOC Finder GUI</title>
+    <title>Baby Gender Poll</title>
     <meta name="description" content="GUI for the indicator of compromise project.">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
 <body class="light">
     <div class="top-bar blue">
         <div class="top-bar-left">
-            <a class="blue" href="https://github.com/fhightower/ioc-finder-gui"><b>IOC Finder GUI</b></a> - GUI for the indicator of compromise project.
+            <a class="blue" href="https://github.com/fhightower/ioc-finder-gui"><b>Baby Gender Poll</b></a> - What gender do you think the baby is?
         </div>
     </div>
 
@@ -37,11 +37,7 @@
         {% block content %}{% endblock %}
     </div>
 
-    <footer class="large-12 dark">
+    <!-- <footer class="large-12 dark">
         Designed and written by <a href="https://hightower.space">Floyd Hightower</a>.
-
-        <span class="float-right">
-            View code or raise an issue on <a href="https://github.com/fhightower/ioc-finder-gui">Github</a>.
-        </span>
-    </footer>
+    </footer> -->
 </body>
