--- a/baby_gender_poll/templates/layout.html
+++ b/baby_gender_poll/templates/layout.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-jgrowl/1.4.6/jquery.jgrowl.min.css">
-    <link rel="stylesheet" href="/static/ioc_finder_gui.css">
+    <link rel="stylesheet" href="/static/baby_gender_poll.css">
 
     <!-- SCRIPTS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -27,7 +27,7 @@
 <body class="light">
     <div class="top-bar blue">
         <div class="top-bar-left">
-            <a class="blue" href="https://github.com/fhightower/ioc-finder-gui"><b>Baby Gender Poll</b></a> - What gender do you think the baby is?
+            <a class="blue" href="/"><b>Baby Gender Poll</b></a> - What gender do you think the baby is?
         </div>
     </div>
 
@@ -36,8 +36,4 @@
     <div class="row">
         {% block content %}{% endblock %}
     </div>
-
-    <!-- <footer class="large-12 dark">
-        Designed and written by <a href="https://hightower.space">Floyd Hightower</a>.
-    </footer> -->
 </body>
