--- a/baby_gender_poll/templates/votes.html
+++ b/baby_gender_poll/templates/votes.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    Votes for boy: {{ data.boy }}
-    Votes for girl: {{ data.girl }}
+    <h3>Votes</h3>
+    <p>Boy: {{ data.boy }}</p>
+    <p>Girl: {{ data.girl }}</p>
 {% endblock %}
